# fashion-diffusion

./: pyproject.toml  train_vae.py
src/: data.py
src/model/: ConvNeXt.py  ViT.py  __init__.py  util.py
